--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -3,33 +3,50 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Speedlify</title>
-		<meta name="description" content="Benchmark web pages over time.">
+		<title>🚀 ST ALi Speed Tests</title>
+		<meta name="description" content="Benchmark speed tests for ST ALi websites.">
 		<link rel="stylesheet" href="{{ '/style.css' | url }}">
 		<script>
 		document.documentElement.classList.add("js");
 		</script>
 	</head>
 	<body>
-		<h1 class="speedlify-hed"><a href="{{ '/' | url }}">speedlify</a>{% if vertical %}:{{ vertical }}{% endif %}</h1>
-		<p class="speedlify-subhed">
-			Benchmark {{ sites[vertical].description or "web pages" }} over time.
+		<h1 class="speedlify-hed">
+			🚀 	{% if page.url != "/" %}
+					<a href="{{ '/' | url }}">
+				{% endif %}
+				ST ALi Speed Test{% if page.url == "/" %}s{% endif %}
+				{% if page.url != "/" %}
+					</a>
+				{% endif %} 
+				<!--{% if vertical %}:{{ vertical }}{% endif %}-->
+				<br>
+				{% if page.url != "/" %}
+					{{ sites[vertical].description or "ST ALi websites" }}
+				{% endif %}
+		</h1>
+
+		<h2 class="speedlify-subhed">
+			🤖 &nbsp;Automatic Benchmark Speed Tests<br>
+			📈 &nbsp; Top 10 Traffic pages per site<br>
+			⏰ &nbsp;Updates <!--em>at most</em> once--> every {{ sites[vertical].options.frequency or 60 }} minutes<br>
 			{%- if sites[vertical].unordered %}
 				Results for this category are unordered.
 			{%- endif %}
-			{%- if maxResults %}
-				Updates <em>at most</em> once every {{ sites[vertical].options.frequency or 60 }} minutes. Only the last {{ maxResults }} run{% if maxResults != 1 %}s{% endif %} (and the oldest run) are shown.
-			{%- endif %}
-			Created by <a href="https://www.zachleat.com/">@zachleat</a>.
-		</p>
-		<p class="speedlify-subhed">
+			<!--{%- if maxResults %}-->
+			<!--&middot; Updates em>at most</em> once every {{ sites[vertical].options.frequency or 60 }} minutes<br>-->
+			<!--&middot; Only the last {{ maxResults }} test{% if maxResults != 1 %}s{% endif %} (and the oldest test) are shown.
+			{%- endif %}-->
+			<!--Created by <a href="https://www.zachleat.com/">@zachleat</a>.-->
+		</h2>
+		<!--p class="speedlify-subhed">
 			<a href="https://github.com/zachleat/speedlify/#deploy-to-netlify">Deploy your own instance of Speedlify and test your web sites</a>.
-		</p>
+		</p-->
 
 		{{ content | safe }}
 
 		<footer>
-			MIT licensed. Read <a href="https://www.zachleat.com/web/speedlify/">the blog post</a>. Source code on <a href="https://github.com/zachleat/speedlify/">GitHub</a>. Created by <a href="https://www.zachleat.com/">@zachleat</a>.
+			<!--MIT licensed. Read <a href="https://www.zachleat.com/web/speedlify/">the blog post</a>. Source code on <a href="https://github.com/zachleat/speedlify/">GitHub</a>. Created by <a href="https://www.zachleat.com/">@zachleat</a>.-->
 		</footer>
 
 		<script defer src="{{ '/chartist.js' | url }}"></script>
