--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -27,9 +27,9 @@
 		</h1>
 
 		<h2 class="speedlify-subhed">
-			🤖 &nbsp;Automatic Benchmark Speed Tests<br>
-			📈 &nbsp; Top 10 Traffic pages per site<br>
-			⏰ &nbsp;Updates <!--em>at most</em> once--> every {{ sites[vertical].options.frequency or 60 }} Minutes<br>
+			🤖 &nbsp;Automatic benchmark speed tests &nbsp;✅<br>
+			📈&nbsp; Top-10 traffic pages per site &nbsp;✅<br>
+			⏰ &nbsp;Tests 4-times daily<!--em>at most</em> once every {{ sites[vertical].options.frequency or 60 }} Minutes--> &nbsp;✅<br>
 			{%- if sites[vertical].unordered %}
 				Results for this category are unordered.
 			{%- endif %}
